fix new cost column alignment

--- a/app/assets/stylesheets/pua_aa_stylesheet.css.scss
+++ b/app/assets/stylesheets/pua_aa_stylesheet.css.scss
@@ -2,7 +2,7 @@ body {
   font-size: 90%;  /* default is 72% */
 }
 
-.col-cost, .cost {
+.col-cost, .cost, .wholesale-cost, .col-wholesale-cost, .retail-cost, .col-retail-cost {
   text-align: right;
 }
 
